fixed text overflow on Hall#show

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -238,6 +238,7 @@ span.label {
     }
     .description {
         margin-bottom: 20px;
+        word-break: break-all;
         h5 {
             font-size: 1.1em;
         }
